# system-prompt-test

./: .gitignore  AGENTS.md  README.md
backend/: .env.example  Cargo.toml  README.md
backend/migrations/: 001_create_prompts.sql  002_m2_projects_layers_versions.sql  003_m3_providers_testcases_runs.sql  004_m4_assertions_fixtures_baselines.sql  005_m6_reports_audit_pricing.sql
backend/src/: crypto.rs  db.rs  main.rs
backend/src/llm/: anthropic.rs  assertions.rs  mod.rs  openai.rs
backend/src/models/: assertion.rs  mod.rs  model.rs  project.rs  prompt.rs  prompt_layer.rs  prompt_version.rs  provider.rs  report.rs  run.rs  test_case.rs
backend/src/routes/: assertions.rs  mod.rs  models_routes.rs  projects.rs  prompt_layers.rs  prompts.rs  providers.rs  reports.rs  runs.rs  test_cases.rs
docs/: final-goal.md  m3-multi-model-execution.md  milestones.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: layers.ts  projects.ts  prompts.ts  providers.ts  reports.ts  sse.ts  testCases.ts
frontend/src/components/: AnalyticsDashboard.tsx  AssertionPanel.tsx  DiffViewer.tsx  ErrorBoundary.tsx  LayerTabs.tsx  Layout.tsx  MergedPreview.tsx  MonacoEditorWrapper.tsx  RunPanel.tsx  RunResultsView.tsx  TestCasePanel.tsx  VariablePanel.tsx  VersionHistory.tsx
frontend/src/pages/: ProjectEditor.tsx  ProjectList.tsx  PromptEditor.tsx  PromptList.tsx  ProviderSettings.tsx
